manifests/app/namespaces/ingress-nginx/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: ExternalName
  externalName: product.core.svc
---
apiVersion: v1
kind: Service
metadata:
  name: transaction
spec:
  type: ExternalName
  externalName: transaction.core.svc
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc
---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  type: ExternalName
  externalName: consul.consul.svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  labels:
    name: product
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - product.setyaji.my.id
    - transaction.setyaji.my.id
    - grafana.setyaji.my.id
    # - consul.setyaji.my.id
    secretName: app-tls
  rules:
  - host: product.setyaji.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: product
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction
  labels:
    name: transaction
spec:
  ingressClassName: nginx
  rules:
  - host: transaction.setyaji.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transaction
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  labels:
    name: grafana
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.setyaji.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 80
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: consul
#   labels:
#     name: consul
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: consul.setyaji.my.id
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: consul
#             port: 
#               number: 80
